# tail-bridge

./: .gitignore  README.md  main.py  pyproject.toml
src/Tailbridge/: __init__.py  tailscale.py
