[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Tailbridge"
version = "0.0.1"
authors = [
    { name="Johannes Kaendler", email="mail@jokaendler.eu" },
]
description = "A Docker Tailscale integration with Traefik"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "docker",
]

[project.urls]
Homepage = "https://github.com/boredjo/tail-bridge"
